@@ -9,15 +9,35 @@ void luaCallExit();
 void luaRegister();
 /* Lua Util functions */
 Color uluaGetColor( lua_State *L );
+/* Only works with positive index. */
+Color uluaGetColorIndex( lua_State *L, int index );
 Vector2 uluaGetVector2( lua_State *L );
+/* Only works with positive index. */
+Vector2 uluaGetVector2Index( lua_State *L, int index );
 Vector3 uluaGetVector3( lua_State *L );
+/* Only works with positive index. */
+Vector3 uluaGetVector3Index( lua_State *L, int index );
 Vector4 uluaGetVector4( lua_State *L );
+/* Only works with positive index. */
+Vector4 uluaGetVector4Index( lua_State *L, int index );
 Rectangle uluaGetRectangle( lua_State *L );
+/* Only works with positive index. */
+Rectangle uluaGetRectangleIndex( lua_State *L, int index );
 Quaternion uluaGetQuaternion( lua_State *L );
+/* Only works with positive index. */
+Quaternion uluaGetQuaternionIndex( lua_State *L, int index );
 Matrix uluaGetMatrix( lua_State *L );
+/* Only works with positive index. */
+Matrix uluaGetMatrixIndex( lua_State *L, int index );
 BoundingBox uluaGetBoundingBox( lua_State *L );
+/* Only works with positive index. */
+BoundingBox uluaGetBoundingBoxIndex( lua_State *L, int index );
 Ray uluaGetRay( lua_State *L );
+/* Only works with positive index. */
+Ray uluaGetRayIndex( lua_State *L, int index );
 NPatchInfo uluaGetNPatchInfo( lua_State *L );
+/* Only works with positive index. */
+NPatchInfo uluaGetNPatchInfoIndex( lua_State *L, int index );
 
 void uluaPushColor( lua_State *L, Color color );
 void uluaPushVector2( lua_State *L, Vector2 vector );
